RESOLVED FIXED284173
Fix occasional crash in foundMixedContentInFrameTree with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=284173
Summary Fix occasional crash in foundMixedContentInFrameTree with site isolation enabled
Alex Christensen
Reported 2024-12-06 10:30:15 PST
...
Attachments
Alex Christensen
Comment 1 2024-12-06 10:36:56 PST
Radar WebKit Bug Importer
Comment 2 2024-12-06 10:40:44 PST
EWS
Comment 3 2024-12-06 18:33:12 PST
Committed 287487@main (01812b56dd47): <https://commits.webkit.org/287487@main> Reviewed commits have been landed. Closing PR #37550 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.